# brein

./: .gitignore  Cargo.toml  app.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
connectors/: database.py  notion.py  web.py
models/: content.py  page.py
src/: main.rs
src/brein/: __main__.py
src/brein/connectors/: database.py  notion.py  web.py
src/brein/models/: content.py  page.py  text_content.py
src/brein/tasks/: NotionSyncTask.py  ScrapeWebPageTask.py  Task.py  TaskManager.py
src/brein/utils/: dict.py
utils/: datetime.py  log.py  uuid.py
