[package]
name = "brein"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["sqlite", "postgres"] }
openai-rust = "0.5.1"
pulldown-cmark = "0.9.3"
walkdir = "2"
reqwest = { version = "0.11", features = ["blocking"] }
html2text = "0.6.0"
